objects/Compliance_Monitoring__c.object
<CustomObject>
    <label>Compliance Monitoring</label>
    <pluralLabel>Compliance Monitorings</pluralLabel>
    <nameField>
        <label>Compliance Monitoring Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>LongTextArea</type>
        <length>32768</length>
    </fields>
    <fields>
        <fullName>Monitoring_Frequency__c</fullName>
        <label>Monitoring Frequency</label>
        <type>Picklist</type>
        <picklist>
            <picklistValues>
                <fullName>Daily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
        </picklist>
    </fields>
    <fields>
        <fullName>Last_Run_Date__c</fullName>
        <label>Last Run Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
    </fields>
</CustomObject>